--- a/debian/rules
+++ b/debian/rules
@@ -9,5 +9,8 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-%:
-	dh $@ 
+index = $(CURDIR)/usr/share/cw1-6005-nm4e11/index.php
+rss_php = $(CURDIR)/usr/share/cw1-6005-nm4e11/rss_php.php
+feeds = $(CURDIR)/etc/cw1-6005-nm4e11/feeds.conf
+bash = $(CURDIR)/usr/bin/cw1-6005-nm4e11
+
