--- a/debian/rules
+++ b/debian/rules
@@ -14,3 +14,6 @@ rss_php = $(CURDIR)/usr/share/cw1-6005-nm4e11/rss_php.php
 feeds = $(CURDIR)/etc/cw1-6005-nm4e11/feeds.conf
 bash = $(CURDIR)/usr/bin/cw1-6005-nm4e11
 
+DIR_usr = $(CURDIR)/debian/cw1-6005-nm4e11/usr
+DIR_etc = $(CURDIR)/debian/cw1-6005-nm4e11/etc
+
