--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: cw1-6005-nm4e11
 Section: php
 Priority: optional
-Maintainer: rex <nm4e11@soton.ac.uk>
+Maintainer: Ning Ma <nm4e11@soton.ac.uk>
 Build-Depends: debhelper (>= 7.0.50~)
 Standards-Version: 3.8.4
 Homepage: <https://github.com/nm4e11/6005_cw1_nm4e11>
